# flower-llm-finetune-challenge

./: README.md  flower-env.yml
flower-finance/: comm_cost.txt  pyproject.toml
flower-finance/flower_finance/: __init__.py  client_app.py  dataset.py  models.py  server_app.py  strategy.py
flower-finance/runs/Aug16_19-40-06_picl/: events.out.tfevents.1755340812.picl.312024.0
flower-finance/runs/Aug16_19-40-34_picl/: events.out.tfevents.1755340840.picl.312024.1
flower-finance/runs/Aug16_19-41-01_picl/: events.out.tfevents.1755340866.picl.312024.2
flower-finance/runs/Aug16_19-41-28_picl/: events.out.tfevents.1755340894.picl.312024.3
flower-finance/runs/Aug16_19-41-46_picl/: events.out.tfevents.1755340912.picl.312025.0
flower-finance/runs/Aug16_19-42-15_picl/: events.out.tfevents.1755340941.picl.312024.4  events.out.tfevents.1755340941.picl.312025.1
flower-finance/runs/Aug16_19-42-42_picl/: events.out.tfevents.1755340968.picl.312025.2
flower-finance/runs/Aug16_19-42-43_picl/: events.out.tfevents.1755340969.picl.312024.5
flower-finance/runs/Aug16_19-43-09_picl/: events.out.tfevents.1755340995.picl.312025.3
flower-finance/runs/Aug16_19-43-37_picl/: events.out.tfevents.1755341022.picl.312024.6  events.out.tfevents.1755341022.picl.312025.4
flower-finance/runs/Aug16_19-44-03_picl/: events.out.tfevents.1755341049.picl.312025.5
flower-finance/runs/Aug16_19-44-04_picl/: events.out.tfevents.1755341049.picl.312024.7
flower-finance/runs/Aug16_19-44-30_picl/: events.out.tfevents.1755341076.picl.312024.8
flower-finance/runs/Aug16_19-44-57_picl/: events.out.tfevents.1755341103.picl.312024.9  events.out.tfevents.1755341103.picl.312025.6
flower-finance/runs/Aug16_19-45-24_picl/: events.out.tfevents.1755341130.picl.312024.10  events.out.tfevents.1755341130.picl.312025.7
flower-finance/runs/Aug16_19-45-51_picl/: events.out.tfevents.1755341157.picl.312025.8
flower-finance/runs/Aug16_19-46-19_picl/: events.out.tfevents.1755341185.picl.312024.11  events.out.tfevents.1755341185.picl.312025.9
(+108 files in other folders)
