[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flower-finance"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.16.0",
    "flwr-datasets>=0.5.0",
    "torch==2.3.1",
    "trl==0.8.1",
    "bitsandbytes==0.45.0",
    "scipy==1.13.0",
    "peft==0.6.2",
    "transformers==4.47.0",
    "sentencepiece==0.2.0",
    "omegaconf==2.3.0",
    "hf_transfer==0.1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "jiamubai"

[tool.flwr.app.components]
serverapp = "flower_finance.server_app:app"
clientapp = "flower_finance.client_app:app"

[tool.flwr.app.config]
model.name = "Qwen/Qwen2.5-7B"
model.quantization = 4
model.gradient-checkpointing = true
model.lora.peft-lora-r = 4
model.lora.peft-lora-alpha = 16
model.lora.peft_lora_target_modules = "all"
train.save-every-round = 5
train.learning-rate-max = 5e-4
train.learning-rate-min = 5e-5
train.seq-length = 512
train.training-arguments.output-dir = ""
train.training-arguments.learning-rate = ""
train.training-arguments.per-device-train-batch-size = 1
train.training-arguments.gradient-accumulation-steps = 4
train.training-arguments.logging-steps = 10
train.training-arguments.num-train-epochs = 3
train.training-arguments.max-steps = 10
train.training-arguments.save-steps = 1000
train.training-arguments.save-total-limit = 10
train.training-arguments.gradient-checkpointing = true
train.training-arguments.lr-scheduler-type = "constant"
strategy.fraction-fit = 0.1
strategy.fraction-evaluate = 0.0
num-server-rounds = 10
use_flexlora = 0

[tool.flwr.app.config.static]
dataset.name = "FinGPT/fingpt-sentiment-train"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 50
options.backend.client-resources.num-cpus = 6
options.backend.client-resources.num-gpus = 1.0
